Alignment half fixed (WIP)

--- a/beams/src/pages/SuburbPage.css
+++ b/beams/src/pages/SuburbPage.css
@@ -1,6 +1,6 @@
 .DGGridContainer{
   width: 100%;
-  height: 450px;
+  height: 500px;
 }
 
 .StatsGridContainer{
@@ -127,8 +127,4 @@
 .CompareDGTextR{
   margin-right: 25px;
   float: right;
-}
-
-.CompareDGContainer{
-  height: 500px;
 }
